13-kubernetes-03-appconfig-01/deployment-3.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-3
  name: deployment-3
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-3
  template:
    metadata:
      labels:
        app: deployment-3
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: volume-1
              mountPath: /usr/share/nginx/html/
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - name: http-8080
              containerPort: 8080
              protocol: TCP
      volumes:
        - name: volume-1
          configMap:
            name: configmap-2
