13-kubernetes-03-appconfig-01/deployment-4.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-4
  name: deployment-4
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-4
  template:
    metadata:
      labels:
        app: deployment-4
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: volume-2
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: volume-2
          configMap:
            name: configmap-3
