13-kubernetes-03-appconfig-01/service-1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: deployment-2
  ports:
    - name: nginx-http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: multitool-http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: multitool-https
      port: 11443
      protocol: TCP
      targetPort: 11443
