13-kubernetes-03-appconfig-01/service-3.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-3
spec:
  selector:
    app: deployment-4
  ports:
    - name: nginx-http
      port: 80
      protocol: TCP
      targetPort: 80
