13-kubernetes-03-appconfig-01/ingress-1.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 13-03.netology
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-3
                port:
                  number: 80
  tls:
    - hosts:
        - 13-03.netology
      secretName: secret-1
